# SpaceBlaster

./: .gitignore  CMakeLists.txt  build-and-run.sh  build.sh
Docs/: PongNotes.docx  SpaceBlaster.docx  SpaceNotes.docx  TO DO.docx
Output/Data/: app.hjson  game.hjson  world.hjson
Output/Shapes/: sprites-d2d.xml
Output/Shapes/exporters/d2d-box2d-xml/: d2d-box2d.xml.bak  exporter.xml.bak
Output/Textures/: asteroids.xml  bigships.xml  effects.tps  effects.xml  items.xml  projectiles.xml  tinyships.tps  tinyships.xml  ui.xml
Source/: App.cpp  App.h  AppDef.cpp  AppDef.h  AppState.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSettings.h  Components.h  EntityFactory.cpp  EntityFactory.h  Exceptions.h  GUISettings.cpp  GUISettings.h  GUIStrings.h  Game.cpp  Game.h  GameConstants.h  GameDef.cpp  GameDef.h  GameInput.h  GameModelData.h  GameModels.h  GameSettings.h  GameState.cpp  GameState.h  Gameplay.cpp  Gameplay.h  Intro.cpp  Intro.h  IntroState.cpp  IntroState.h  MainMenu.cpp  MainMenu.h  MainMenuState.cpp  MainMenuState.h  Model.cpp  Model.h  ParticleSystem.cpp  (+23 more)
WorkingDir/Data/: app.hjson  game.hjson  world.hjson
WorkingDir/Shapes/: shapes.pes  sprites-d2d.xml
WorkingDir/Shapes/exporters/d2d-box2d-xml/: d2d-box2d.xml  d2d-box2d.xml.bak  exporter.xml  (+1 more)
WorkingDir/Textures/: TexturePackerSettings.txt  asteroids.tps  asteroids.xml  bigships.tps  bigships.xml  effects.tps  effects.xml  icons.tps  icons.xml  items.tps  items.xml  projectiles.tps  projectiles.xml  tinyships.tps  tinyships.xml  ui.tps  ui.xml
msvc/: Space.sln  Space.vcxproj  Space.vcxproj.filters
